# opc-xml-da-client

./: .gitignore  .pre-commit-config.yaml  .stylish-haskell.yaml  LICENSE  README.md  build.bash  cabal.project  flake.nix  opc-xml-da-client.cabal  readme.md  stack.yaml
.github/workflows/: integrate.yaml
base/OpcXmlDaClient/Base/: HashMap.hs  Prelude.hs  Vector.hs
core/: types.domain.yaml
core/OpcXmlDaClient/: Core.hs
core/OpcXmlDaClient/Core/: Prelude.hs  Types.hs  XmlConstruction.hs  XmlParsing.hs
core/OpcXmlDaClient/Core/XmlParsing/: Internal.hs
dist-newstyle/cache/: compiler  config
domain/: protocol.domain.yaml
library-test/: Main.hs
protocol/: types.domain.yaml
protocol-test/: Main.hs  Pcap.hs
protocol/OpcXmlDaClient/Protocol/: Namespaces.hs  Types.hs  ValueParsing.hs  XmlConstruction.hs  XmlParsing.hs
quickcheck-util/OpcXmlDaClient/QuickCheckUtil/: Gens.hs
samples/: 679.request.xml  680.response.xml  fault-on-old-soap-2.response.xml  fault-on-old-soap.response.xml  fault.response.xml
schemas/: protocol.yaml
test/: Main.hs
test/OpcXmlDaClient/QuickCheckUtil/: Gens.hs
test/OpcXmlDaClient/TestSuites/: Mocking.hs  Protocol.hs  XmlSchemaValues.hs
test/OpcXmlDaClient/TestSuites/Protocol/: Pcap.hs
xml-builder/OpcXmlDaClient/: XmlBuilder.hs
xml-builder/OpcXmlDaClient/XmlBuilder/: HashMap.hs  Identified.hs
xml-schema-values/: types.domain.yaml
xml-schema-values-test/: Main.hs
xml-schema-values/OpcXmlDaClient/XmlSchemaValues/: Attoparsec.hs  Rendering.hs  Types.hs
xml-schema-values/OpcXmlDaClient/XmlSchemaValues/Util/: TimeMath.hs
