cabal-version: 3.0
name: opc-xml-da-client
version: 0.1
synopsis: OPC XML-DA Client
build-type: Simple
extra-source-files:
  core/*.yaml

source-repository head
  type: git
  location: git://github.com/mlabs-haskell/opc-xml-da-client.git

library
  hs-source-dirs: library
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient
  build-depends:
    acc ^>=0.1.3,
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    containers ^>=0.6.2.1,
    free >=5.1 && <6,
    hashable ^>=1.3.2.0,
    opc-xml-da-client-base,
    opc-xml-da-client-core,
    text >=1 && <2,
    time >=1.9.3 && <1.12,
    vector ^>=0.12,
    xml-conduit ^>=1.9.1.1,

-- Lower-level library providing an abstraction over the protocol, serialization and networking.
-- Later on we may extract it as a dedicated library.
-- 
-- Basically it implements presentation layer.
-- See https://en.wikipedia.org/wiki/Presentation_layer
library opc-xml-da-client-core
  hs-source-dirs: core
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient.Core
  other-modules:
    OpcXmlDaClient.Core.Types
    OpcXmlDaClient.Core.XmlConstruction
    OpcXmlDaClient.Core.XmlParsing
    OpcXmlDaClient.Core.XmlParsing.Internal
  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    lens ^>=5.0,
    containers ^>=0.6.2.1,
    domain ^>=0.1.1,
    opc-xml-da-client-base,
    text >=1 && <2,
    time >=1.9.3 && <1.12,
    vector ^>=0.12,
    xml-conduit ^>=1.9.1.1,
    xml-lens ^>= 0.3,

-- Prelude and possibly other utils used across this project's libraries.
library opc-xml-da-client-base
  hs-source-dirs: base
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient.Base.Prelude
  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    data-default ^>=0.7.1.1,
    containers ^>=0.6.2.1,
    hashable ^>=1.3.2.0,
    hashable-time >=0.2 && <0.4,
    scientific ^>=0.3.6.2,
    text >=1 && <2,
    time >=1.9.3 && <1.12,
    transformers ^>=0.5,
    vector ^>=0.12,
    vector-instances ^>=3.4,
