cabal-version: 3.0
name: opc-xml-da-client
version: 0.1
synopsis: OPC XML-DA Client
build-type: Simple
extra-source-files:
  library/*.domain.yaml

source-repository head
  type: git
  location: git://github.com/mlabs-haskell/opc-xml-da-client.git

library
  hs-source-dirs: library
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient
    OpcXmlDaClient.Types
    OpcXmlDaClient.XmlConstruction
    OpcXmlDaClient.XmlParsing
  other-modules:
    OpcXmlDaClient.Prelude
  build-depends:
    attoparsec >=0.13.2.5 && <0.15,
    attoparsec-data ^>=1.0.5.2,
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    data-default ^>=0.7.1.1,
    containers ^>=0.6.2.1,
    domain ^>=0.1.1,
    hashable ^>=1.3,
    hashable-time >=0.2 && <0.4,
    scientific ^>=0.3.6.2,
    text >=1 && <2,
    time >=1.9.3 && <2,
    transformers ^>=0.5,
    vector ^>=0.12,
    vector-builder ^>=0.3.8.1,
    vector-instances ^>=3.4,
    xml-conduit ^>=1.9.1.1,
    xml-unscrambler ^>=0.1,

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
  build-depends:
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    opc-xml-da-client,
    rerebase >=1.13.0.1 && <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,
    xml-conduit,
    xml-unscrambler,
