cabal-version: 3.0
name: opc-xml-da-client
version: 0.1
synopsis: OPC XML-DA Client
build-type: Simple
extra-source-files:
  protocol/*.domain.yaml

source-repository head
  type: git
  location: git://github.com/mlabs-haskell/opc-xml-da-client.git

library
  hs-source-dirs: library
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient
  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    containers ^>=0.6.2.1,
    http-client >=0.7.8 && <0.8,
    opc-xml-da-client-base,
    opc-xml-da-client-protocol,
    scientific ^>=0.3.6.2,
    text >=1 && <2,
    transformers ^>=0.5,
    vector ^>=0.12,
    xml-conduit ^>=1.9.1.1,
    xml-parser ^>=0.1,

library opc-xml-da-client-protocol
  hs-source-dirs: protocol
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient.Protocol.Types
    OpcXmlDaClient.Protocol.XmlConstruction
    OpcXmlDaClient.Protocol.XmlParsing
    OpcXmlDaClient.Protocol.ValueParsing
  other-modules:
    OpcXmlDaClient.Protocol.Namespaces
  build-depends:
    attoparsec >=0.13.2.5 && <0.15,
    attoparsec-data ^>=1.0.5.2,
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    containers ^>=0.6.2.1,
    domain ^>=0.1.1,
    opc-xml-da-client-base,
    opc-xml-da-client-xml-builder,
    scientific ^>=0.3.6.2,
    text >=1 && <2,
    time >=1.9.3 && <2,
    vector ^>=0.12,
    vector-builder ^>=0.3.8.1,
    xml-conduit ^>=1.9.1.1,
    xml-parser ^>=0.1,

library opc-xml-da-client-xml-builder
  hs-source-dirs: xml-builder
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient.XmlBuilder
  other-modules:
    OpcXmlDaClient.XmlBuilder.HashMap
    OpcXmlDaClient.XmlBuilder.Identified
  build-depends:
    acc >=0.1.3 && <0.2,
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    containers ^>=0.6.2.1,
    opc-xml-da-client-base,
    scientific ^>=0.3.6.2,
    text >=1 && <2,
    unordered-containers ^>=0.2.14,
    xml-conduit ^>=1.9.1.1,

library opc-xml-da-client-base
  hs-source-dirs: base
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields
  exposed-modules:
    OpcXmlDaClient.Base.Prelude
    OpcXmlDaClient.Base.MVector
    OpcXmlDaClient.Base.Vector
  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.12,
    data-default ^>=0.7.1.1,
    containers ^>=0.6.2.1,
    hashable ^>=1.3,
    hashable-time >=0.2 && <0.4,
    scientific ^>=0.3.6.2,
    text >=1 && <2,
    time >=1.9.3 && <2,
    transformers ^>=0.5,
    vector ^>=0.12,
    vector-instances ^>=3.4,

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: ApplicativeDo, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NamedFieldPuns, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
  build-depends:
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    opc-xml-da-client-protocol,
    rerebase >=1.13.0.1 && <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,
    xml-conduit,
    xml-parser,
